# ComfyUI-LLM-Nodes

./: .gitignore  DEBUG_LOGS.md  LICENSE  MIGRATION_v4.0.0.md  README.md  SECURITY.md  SECURITY_AUDIT.md  TEST_RESULTS.md  TROUBLESHOOTING.md  __init__.py  nodes.py  nodes_openrouter.py  pyproject.toml  test_comfyui_load.py  test_e2e.py  test_full_workflow.py  test_image_gen.py  test_node_logic.py  test_openrouter.py
.github/workflows/: publish.yml
docs/: openrouter-image-generation-guide.md
